--- a/src/index.html
+++ b/src/index.html
@@ -189,27 +189,27 @@
         </div>
 
         <div class="site-section">
-            <div class="container">
+            <div class="container" align="center">
                 <h2>Quotes for you!!!</h2>
 
                 <div class="grid">
-                    <div class="grid-cell" align="center">
+                    <div class="grid-cell">
                         <h3><span class="star">&#x2605;</span> Espeñiol's quote</h3>
                         <p>„ The true character of a dog is not at the first meeting but at the last! “</p>
                     </div>
                 <br/>
-                    <div class="grid-cell" align="center">
+                    <div class="grid-cell">
                         <h3><span class="star">&#x2605;</span> Dolinj's quote</h3>
                         <p>„ Stupid people have unnecessary thoughts. Only the best, it does not hide! “</p>
                     </div>
                 <br/>
-                    <div class="grid-cell" align="center">
+                    <div class="grid-cell">
                         <h3><span class="star">&#x2605;</span> Jack Asbilph's quote</h3>
                         <p>„ Take your work seriously, but never yourself! “</p>
                     </div>
                 <br/>
                 <br/>
-                    <div class="grid-cell" align="center">
+                    <div class="grid-cell">
                         <h3><span class="star">&#x2605;</span> <strong><i>Quote of the whole Jack's Dogs Family</i></strong></h3>
                         <p>„ <i>We all live under the same sky, but we do not all have the same horizon!</i> “</p>
                     </div>
