--- a/src/index.html
+++ b/src/index.html
@@ -221,7 +221,7 @@
         <div class="site-section site-section-video">
             <h2>Trailer</h2>
             <div class="content">
-                <video id="a240e92d" class="sublime" poster="https://cdn.sublimevideo.net/vpa/ms_800.jpg" width="640" height="360" title="Midnight Sun" data-uid="a240e92d" preload="none">
+                <video id="a240e92d" class="sublime" poster="https://cdn.sublimevideo.net/vpa/ms_800.jpg" width="640" height="360" title="Midnight Sun" data-uid="a240e92d" preload="none" align="center">
                     <source src="https://cdn.sublimevideo.net/vpa/ms_360p.mp4" />
                     <source src="https://cdn.sublimevideo.net/vpa/ms_720p.mp4" data-quality="hd" />
                     <source src="https://cdn.sublimevideo.net/vpa/ms_360p.webm" />
@@ -254,8 +254,8 @@
                     data-ga-category="Characters"
                     data-ga-action="Characters - bottom"
                     data-ga-label="v4.3.0">
-                    <strong>view more</strong>
-                    <span class="Characters">CHARACTERS</span>
+                    <strong><p style="color: #000000">view more</p></strong>
+                    <span class="Characters"><p style="color: #000000">CHARACTERS</p></span>
                 </a>
             </div>
         </div>
