--- a/chat/index.html
+++ b/chat/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-<title>Cloud Chat | Chatly</title>
+<title>Chat | The Jack's Dogs Family</title>
 
   <!-- GEO INFO(S) -->
     <meta name="dc.language" content="en">
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="css/chat.css">
 
   <!-- DATA -->
-    <meta name="title" content="Chatly's Cloud Chat App">
-    <meta name="description" content="Chatly. Chat easy.">
-    <meta name="keywords" content="Chatly, chatly.isc, cloud.chatly.isc, chat, firebase, app">
+    <meta name="title" content="The Jack's Dogs Family Chat">
+    <meta name="description" content="Chatly. Chat easy. @ the official 'The Jack's Dogs Family' website">
+    <meta name="keywords" content="Chatly, jdsf.isc, chat, firebase">
   </head>
 
   <body>
@@ -29,13 +29,13 @@
       <header>
         <!-- APP TITLE -->
         <div class="example-chat-toolbar">
-          <h2>Chatly's Cloud Chat App</h2>
+          <h2>The Jack's Dogs Family Chat</h2>
         </div>
 
         <!-- NAME FIELD -->
         <div class='example-chat-username-field'>
           <div class="example-chat-avatar"><i class="fa fa-bolt"></i></div>
-          <input type='text' id='username' placeholder='Enter your name...'>
+          <input type='text' id='username' placeholder='Enter your (real) name...'>
         </div>
       </header>
 
@@ -45,7 +45,7 @@
       <!-- MESSAGE INPUT FIELD -->
       <footer>
         <i class="fa fa-comment-o icon-chat"></i>
-        <input type='text' id='new-message'  placeholder='Type a message...'>
+        <input type='text' id='new-message'  placeholder='Type a nice message...'>
       </footer>
     </div>
 
@@ -60,4 +60,4 @@
 <!-- SITE END -->
   </body>
 </html>
-<!-- Build the <> with <3 by the Chatly team -->
+<!-- Build the <> with <3 by the Chatly team for The Jack's Dogs Family -->
