--- a/index.html
+++ b/index.html
@@ -195,23 +195,25 @@
                 <div class="grid">
                     <div class="grid-cell">
                         <h3><span class="star">&#x2605;</span> Espeñiol's quote</h3>
-                        <p>„ The true character of a dog is not at the first meeting but at the last! “</p>
+                        <p>„ The true character of a dog is not at the first meeting but at the last! “ B-)</p>
                     </div>
                 <br/>
                     <div class="grid-cell">
                         <h3><span class="star">&#x2605;</span> Dolinj's quote</h3>
-                        <p>„ Stupid people have unnecessary thoughts. Only the best, it does not hide! “</p>
+                        <p>„ Stupid people have unnecessary thoughts. Only the best, it does not hide! “ :-P</p>
                     </div>
                 <br/>
                     <div class="grid-cell">
                         <h3><span class="star">&#x2605;</span> Jack Asbilph's quote</h3>
-                        <p>„ Take your work seriously, but never yourself! “</p>
+                        <p>„ Take your work seriously, but never yourself! “ ;-)</p>
                     </div>
                 <br/>
                 <br/>
                     <div class="grid-cell">
+                        <big>
                         <h3><span class="star">&#x2605;</span> <strong><i>Quote of the whole Jack's Dogs Family</i></strong></h3>
                         <p>„ <i>We all live under the same sky, but we do not all have the same horizon!</i> “</p>
+                        </big>
                     </div>
                 </div>
 
@@ -221,18 +223,20 @@
         <div class="site-section site-section-video">
             <h2>Trailer</h2>
             <div class="content">
+            
                 <video id="a240e92d" class="sublime" poster="https://cdn.sublimevideo.net/vpa/ms_800.jpg" width="640" height="360" title="Midnight Sun" data-uid="a240e92d" preload="none" align="center">
                     <source src="https://cdn.sublimevideo.net/vpa/ms_360p.mp4" />
                     <source src="https://cdn.sublimevideo.net/vpa/ms_720p.mp4" data-quality="hd" />
                     <source src="https://cdn.sublimevideo.net/vpa/ms_360p.webm" />
                     <source src="https://cdn.sublimevideo.net/vpa/ms_720p.webm" data-quality="hd" />
                 </video>
+            
                 <div class="cta-option">
                     <a class="btn btn-alt"
                        href="videos.html"
                        data-ga-category="Outbound links"
                        data-ga-action="Watch more video"
-                       data-ga-label="Video playlist">More videos -></a>
+                       data-ga-label="Video playlist">Watch more videos</a>
                 </div>
             </div>
         </div>
@@ -241,11 +245,12 @@
             <h2>Characters</h2>
             <p class="in-the-wild">
                 Jack Asbilph,
-                Espeniol,
+                Espeñiol,
                 Dolinj,
                 Lissi Asbilph,
                 Liz,
                 Jenny
+                and more???
             </p>
 
             <div class="cta-option">
