--- a/contact.html
+++ b/contact.html
@@ -155,65 +155,24 @@
 
             <div class="site-promo">
                 <h1>Contact</h1>
-                <p class="description">NEEED TO BE CHANGED!</p>
-
-                <div class="cta-option">
-                    <a class="btn btn-comics"
-                       href="comics.html"
-                       data-ga-category="Comics"
-                       data-ga-action="Comics - top"
-                       data-ga-label="for you!">
-                        <strong>Comics</strong>
-                        <span class="version">for you!</span>
-                    </a>
-                    <a class="hint-message"
-                       href="contact.html"
-                       data-ga-category="Outbound links"
-                       data-ga-action="Sent us a hint!"
-                       data-ga-label="Hint">
-                        Send us a hint!
-                    </a>
-                </div>
-
-                <div class="cta-option">
-                    <a class="btn btn-alt"
-                       href="videos.html"
-                       data-ga-category="Outbound links"
-                       data-ga-action="Videos"
-                       data-ga-label="Videos">
-                        Videos
-                    </a>
-                </div>
+                <p class="description"Do you want to contact "The Jack's Dogs Family"?</p>
             </div>
         <!-- end site-promo -->
         </div>
 
         <div class="site-section">
             <div class="container" align="center">
-                <h2>Quotes for you!!!</h2>
+                <h2>Founder</h2>
 
                 <div class="grid">
                     <div class="grid-cell">
-                        <h3><span class="star">&#x2605;</span> Espeñiol's quote</h3>
-                        <p>„ The true character of a dog is not at the first meeting but at the last! “ B-)</p>
+                        <h3><span class="star">&#x2605;</span> Espeñiol</h3>
+                        <p>... is Suriyaa Kudo. The founder of this website and story maker. Contact him under <a href="http://isc-host.github.io/suriyaa.me/">suriyaa.isc</a></p>
                     </div>
                 <br/>
                     <div class="grid-cell">
-                        <h3><span class="star">&#x2605;</span> Dolinj's quote</h3>
-                        <p>„ Stupid people have unnecessary thoughts. Only the best, it does not hide! “ :-P</p>
-                    </div>
-                <br/>
-                    <div class="grid-cell">
-                        <h3><span class="star">&#x2605;</span> Jack Asbilph's quote</h3>
-                        <p>„ Take your work seriously, but never yourself! “ ;-)</p>
-                    </div>
-                <br/>
-                <br/>
-                    <div class="grid-cell">
-                        <big>
-                        <h3><span class="star">&#x2605;</span> <strong><i>Quote of the whole Jack's Dogs Family</i></strong></h3>
-                        <p>„ <i>We all live under the same sky, but we do not all have the same horizon!</i> “</p>
-                        </big>
+                        <h3><span class="star">&#x2605;</span> Dolinj</h3>
+                        <p>... is Aahash de Ruffy. The drawer of the comics. Contact him under <a href="#">aahash.isc</a></p>
                     </div>
                 </div>
 
@@ -221,47 +180,13 @@
         </div>
 
         <div class="site-section site-section-video">
-            <h2>Trailer</h2>
+            <h2>Team</h2>
             <div class="content">
-            
-                <video id="a240e92d" class="sublime" poster="https://cdn.sublimevideo.net/vpa/ms_800.jpg" width="640" height="360" title="Midnight Sun" data-uid="a240e92d" preload="none" align="center">
-                    <source src="https://cdn.sublimevideo.net/vpa/ms_360p.mp4" />
-                    <source src="https://cdn.sublimevideo.net/vpa/ms_720p.mp4" data-quality="hd" />
-                    <source src="https://cdn.sublimevideo.net/vpa/ms_360p.webm" />
-                    <source src="https://cdn.sublimevideo.net/vpa/ms_720p.webm" data-quality="hd" />
-                </video>
-            
-                <div class="cta-option">
-                    <a class="btn btn-alt"
-                       href="videos.html"
-                       data-ga-category="Outbound links"
-                       data-ga-action="Watch more video"
-                       data-ga-label="Video playlist">Watch more videos</a>
-                </div>
-            </div>
-        </div>
 
-        <div class="site-section">
-            <h2>Characters</h2>
-            <p class="in-the-wild">
-                Jack Asbilph,
-                Espeñiol,
-                Dolinj,
-                Lissi Asbilph,
-                Liz,
-                Jenny
-                and more???
-            </p>
+                Contact the whole team and send your fan post here:
 
-            <div class="cta-option">
-                <a class="btn btn-characters"
-                    href="characters.html"
-                    data-ga-category="Characters"
-                    data-ga-action="Characters - bottom"
-                    data-ga-label="v4.3.0">
-                    <strong><p style="color: #000000">view more</p></strong>
-                    <span class="Characters"><p style="color: #000000">CHARACTERS</p></span>
-                </a>
+                ...
+
             </div>
         </div>
 
