--- a/contact.html
+++ b/contact.html
@@ -166,12 +166,12 @@
 
                 <div class="grid">
                     <div class="grid-cell">
-                        <h3><span class="star">&#x2605;</span> Espeñiol</h3>
+                        <h3><span class="star">&#x2605;</span> Espeñiol...</h3>
                         <p>... is Suriyaa Kudo. The founder of this website and story maker. Contact him under <a href="http://isc-host.github.io/suriyaa.me/">suriyaa.isc</a></p>
                     </div>
                 <br/>
                     <div class="grid-cell">
-                        <h3><span class="star">&#x2605;</span> Dolinj</h3>
+                        <h3><span class="star">&#x2605;</span> Dolinj...</h3>
                         <p>... is Aahash de Ruffy. The drawer of the comics. Contact him under <a href="#">aahash.isc</a></p>
                     </div>
                 </div>
@@ -184,7 +184,7 @@
             <div class="content">
 
                 Contact the whole team and send your fan post here:
-
+                <br/>
                 ...
 
             </div>
