--- a/characters.html
+++ b/characters.html
@@ -166,6 +166,7 @@
                     <div class="content">
                         <p>...</p>
                     </div>
+            </div>
         </div>
 
         <div class="site-section">
@@ -174,6 +175,7 @@
                     <div class="content">
                         <p>...</p>
                     </div>
+            </div>
         </div>
 
         <div class="site-section">
@@ -182,6 +184,7 @@
                     <div class="content">
                         <p>...</p>
                     </div>
+            </div>
         </div>
 
         <div class="aside">
