--- a/index.html
+++ b/index.html
@@ -379,4 +379,4 @@ $("#contact").click(function() { NProgress.start(); });
 <!-- SCRIPT END -->
     </body>
 </html>
-<!-- Built with <3 by Espeñiol. ;-) -->
+<!-- Built the <> with <3 by Espeñiol. ;-) -->
