--- a/index.html
+++ b/index.html
@@ -322,16 +322,16 @@
                 </p>
 
                 <p>A web project from <a href="https://github.com/iSC-Host/jdsf.isc">iSC Host</a> created and maintained by:<br>
-                   <a href="http://suriyaa.isc">Suriyaa Kudo</a>
+                   <a href="https://bit.ly/Suriyaa">Suriyaa Kudo</a>
                 </p>
 
                 <p>Comic drawed by<br>
-                    <a href="http://aahash.isc">Aahash de Ruffy</a>
+                    <a href="https://bit.ly/AahashDeRuffy">Aahash de Ruffy</a>
                 </p>
                 <br />
                 <br />
                 <p>
-                <a href="http://suriyaa.isc">The Jack's Dogs Family © 2014 | iSC Entertainment & ACS Mission Verlag </a>
+                <a href="https://bit.ly/JDSF-Site">The Jack's Dogs Family © 2014 | iSC Entertainment & ACS Mission Verlag </a>
 
                 <div class="wrapper">
                     <span class="made-with-heart">
