--- a/index.html
+++ b/index.html
@@ -161,13 +161,12 @@
                 <p class="description">The funniest comic and animation in the world!!!</p>
 
                 <div class="cta-option">
-                    <a class="btn btn-comics"
+                    <a class="btn btn-alt"
                        href="comics.html"
-                       data-ga-category="Comics"
-                       data-ga-action="Comics - top"
-                       data-ga-label="for you!">
-                        <strong>Comics</strong>
-                        <span class="version">for you!</span>
+                       data-ga-category="Outbound links"
+                       data-ga-action="Comics"
+                       data-ga-label="Comics">
+                        <strong>Comics</strong> for you!
                     </a>
                     <a class="hint-message"
                        href="contact.html"
