--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                        data-ga-category="Outbound links"
                        data-ga-action="Comics"
                        data-ga-label="Comics">
-                        <strong>Comics</strong> for you!
+                        <strong>Comics</strong>
                     </a>
                     <a class="hint-message"
                        href="contact.html"
