--- a/index.html
+++ b/index.html
@@ -168,6 +168,9 @@
                        data-ga-label="Comics">
                         <strong>Comics</strong>
                     </a>
+                </div>
+
+                <div class="cta-option">
                     <a class="hint-message"
                        href="contact.html"
                        data-ga-category="Outbound links"
