--- a/index.html
+++ b/index.html
@@ -148,6 +148,10 @@
                            data-ga-category="Outbound links"
                            data-ga-action="Nav click"
                            data-ga-label="View the Videos">Videos</a></li>
+                    <li><a href="contact.html"
+                           data-ga-category="Outbound links"
+                           data-ga-action="Nav click"
+                           data-ga-label="Contact us">Contact</a></li>
                     <li><a href="about.html"
                            data-ga-category="Outbound links"
                            data-ga-action="Nav click"
@@ -167,16 +171,6 @@
                        data-ga-action="Comics"
                        data-ga-label="Comics">
                         <strong>Comics</strong>
-                    </a>
-                </div>
-
-                <div class="cta-option">
-                    <a class="hint-message"
-                       href="contact.html"
-                       data-ga-category="Outbound links"
-                       data-ga-action="Sent us a hint!"
-                       data-ga-label="Hint">
-                        Send us a hint!
                     </a>
                 </div>
 
