--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
         <div class="site-section">
             <div class="container" align="center">
-                <h2>Quotes for you!!!</h2>
+                <h2>Sweet Quotes</h2>
 
                 <div class="grid">
                     <div class="grid-cell">
@@ -220,7 +220,7 @@
         </div>
 
         <div class="site-section site-section-video">
-            <h2>Trailer</h2>
+            <h2>Nice Trailer</h2>
             <div class="content">
             
                 <video id="a240e92d" class="sublime" poster="https://cdn.sublimevideo.net/vpa/ms_800.jpg" width="640" height="360" title="Midnight Sun" data-uid="a240e92d" preload="none" align="center">
@@ -241,7 +241,7 @@
         </div>
 
         <div class="site-section">
-            <h2>Characters</h2>
+            <h2>Cool Characters</h2>
             <p class="in-the-wild">
                 Jack Asbilph,
                 Espeñiol,
