Correct @Twitter share button

--- a/index.html
+++ b/index.html
@@ -302,12 +302,12 @@
         <div class="site-footer" role="contentinfo">
                 <p>
                     <a class="twitter-share-button"
-                       href="https://twitter.com/share"
+                       href="https://twitter.com/intent/tweet"
                        data-count="none"
                        data-lang="en"
                        data-via="SuriyaaKudoIsc"
                        data-size="large"
-                       data-text="The Jack's Dogs Family: We are rocking you! ;-)"
+                       data-text="We are waiting for you! ;-) via The Jack's Dogs Family official website. #lovethejdsf"
                        data-url="http://jdsf.isc">Tweet</a>
                    &nbsp;
                    <a class="twitter-follow-button"
