--- a/index.html
+++ b/index.html
@@ -221,9 +221,9 @@
 
         <div class="site-section site-section-video">
             <h2>Nice Trailer</h2>
-            <div class="content">
+            <div class="content" align="center">
             
-                <video id="a240e92d" class="sublime" poster="https://cdn.sublimevideo.net/vpa/ms_800.jpg" width="640" height="360" title="Midnight Sun" data-uid="a240e92d" preload="none" align="center">
+                <video id="a240e92d" class="sublime" poster="https://cdn.sublimevideo.net/vpa/ms_800.jpg" width="640" height="360" title="Midnight Sun" data-uid="a240e92d" preload="none">
                     <source src="https://cdn.sublimevideo.net/vpa/ms_360p.mp4" />
                     <source src="https://cdn.sublimevideo.net/vpa/ms_720p.mp4" data-quality="hd" />
                     <source src="https://cdn.sublimevideo.net/vpa/ms_360p.webm" />
