--- a/index.html
+++ b/index.html
@@ -243,13 +243,7 @@
         <div class="site-section">
             <h2>Cool Characters</h2>
             <p class="in-the-wild">
-                Jack Asbilph,
-                Espeñiol,
-                Dolinj,
-                Lissi Asbilph,
-                Liz,
-                Jenny
-                and more???
+                The drawer and cooker Jack Asbilph, the cool, technical expert dog Espeñiol, the crazy, funny dog Dolinj and more characters???
             </p>
 
             <div class="cta-option">
