--- a/index.html
+++ b/index.html
@@ -250,10 +250,9 @@
                 <a class="btn btn-characters"
                     href="characters.html"
                     data-ga-category="Characters"
-                    data-ga-action="Characters - bottom"
-                    data-ga-label="v4.3.0">
-                    <strong><p style="color: #000000">view more</p></strong>
-                    <span class="Characters"><p style="color: #000000">CHARACTERS</p></span>
+                    data-ga-action="Characters"
+                    data-ga-label="Characters">
+                    <strong><p style="color: #000000">view more</p></strong> <span class="Characters"><p style="color: #000000">CHARACTERS</p></span>
                 </a>
             </div>
         </div>
