--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
             </p>
 
             <div class="cta-option">
-                <a class="btn btn-characters"
+                <a class="btn btn-alt"
                     href="characters.html"
-                    data-ga-category="Characters"
+                    data-ga-category="Outbound links"
                     data-ga-action="Characters"
                     data-ga-label="Characters">
                     <strong><p style="color: #000000">view more</p></strong> <span class="Characters"><p style="color: #000000">CHARACTERS</p></span>
