--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                    data-ga-category="Outbound links"
                    data-ga-action="Characters"
                    data-ga-label="Characters">
-                    <strong><p style="color: #000000">view more</p></strong> <span class="Characters"><p style="color: #000000">CHARACTERS</p></span>
+                    view more <strong>Characters</strong>
                 </a>
             </div>
         </div>
