--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                    data-ga-category="Outbound links"
                    data-ga-action="Characters"
                    data-ga-label="Characters">
-                    Show all more <strong>Characters</strong>
+                    Show all <strong>Characters</strong>
                 </a>
             </div>
         </div>
