--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                 <br />
                 <br />
                 <p>
-                <a href="https://bit.ly/JDSF-Site">The Jack's Dogs Family © 2014 | iSC Entertainment & ACS Mission Verlag </a>
+                <a href="https://bit.ly/JDSF-Site">The Jack's Dogs Family © 2014-present | VIA Entertainment & ACS Films </a>
 
                 <div class="wrapper">
                     <span class="made-with-heart">
