--- a/index.html
+++ b/index.html
@@ -224,10 +224,10 @@
             <div class="content" align="center">
             
                 <video id="a240e92d" class="sublime" poster="https://cdn.sublimevideo.net/vpa/ms_800.jpg" width="640" height="360" title="Midnight Sun" data-uid="a240e92d" preload="none">
-                    <source src="https://cdn.sublimevideo.net/vpa/ms_360p.mp4" />
-                    <source src="https://cdn.sublimevideo.net/vpa/ms_720p.mp4" data-quality="hd" />
-                    <source src="https://cdn.sublimevideo.net/vpa/ms_360p.webm" />
-                    <source src="https://cdn.sublimevideo.net/vpa/ms_720p.webm" data-quality="hd" />
+                    <source src="https://www.youtube.com/watch?v=AWrqNj6VVT4" />
+                    <source src="https://www.youtube.com/watch?v=AWrqNj6VVT4" data-quality="hd" />
+                    <source src="https://www.youtube.com/watch?v=AWrqNj6VVT4" />
+                    <source src="https://www.youtube.com/watch?v=AWrqNj6VVT4" data-quality="hd" />
                 </video>
             
                 <div class="cta-option">
