--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 
         <!-- SublimeVideo -->
             <script type="text/javascript" src="//cdn.sublimevideo.net/js/0ajldsq1.js"></script>
+            <script type="text/javascript" src="//cdn.sublimevideo.net/js/ibvjcopp.js"></script>
 
     <!-- GENERATOR(S) -->
         <!-- We use this editors to edit jdsf.isc -->
@@ -222,12 +223,25 @@
         <div class="site-section site-section-video">
             <h2>Nice Trailer</h2>
             <div class="content" align="center">
-            
-                <video id="a240e92d" class="sublime" poster="https://cdn.sublimevideo.net/vpa/ms_800.jpg" width="640" height="360" title="Midnight Sun" data-uid="a240e92d" preload="none">
-                    <source src="https://www.youtube.com/watch?v=AWrqNj6VVT4" />
-                    <source src="https://www.youtube.com/watch?v=AWrqNj6VVT4" data-quality="hd" />
-                    <source src="https://www.youtube.com/watch?v=AWrqNj6VVT4" />
-                    <source src="https://www.youtube.com/watch?v=AWrqNj6VVT4" data-quality="hd" />
+
+                <video
+                    title="The Jack's Dogs Family Trailer"
+                    id="AWrqNj6VVT4"
+                    class="sublime"
+                    width="640"
+                    height="360"
+                    data-uid="AWrqNj6VVT4"
+                    data-youtube-id="AWrqNj6VVT4"
+                    preload="none"
+                    poster=""
+                    data-uid="home-v2"
+                    data-autoresize="fit"
+                    data-embed-type="auto"
+                    data-player-kit="11"
+                    data-logo-enable="true"
+                    data-embed-enable="true"
+                    data-sharing-enable="true"
+                    data-subtitles-enable="true">
                 </video>
             
                 <div class="cta-option">
