--- a/index.html
+++ b/index.html
@@ -378,6 +378,13 @@ $("#about").click(function() { NProgress.start(); });
 $("#contact").click(function() { NProgress.start(); });
 </script>
 
+<!-- GetSiteControl -->
+<script>
+  (function (w,i,d,g,e,t,s) {w[d] = w[d]||[];t= i.createElement(g);
+    t.async=1;t.src=e;s=i.getElementsByTagName(g)[0];s.parentNode.insertBefore(t, s);
+  })(window, document, '_gscq','script','//widgets.getsitecontrol.com/22160/script.js');
+</script>
+
 <!-- SCRIPT END -->
     </body>
 </html>
