--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         <!-- NProgress -->
             <link rel='stylesheet' href='http://ricostacruz.com/nprogress/nprogress.css'/>
 
+        <!-- WebIcons -->
+            <link rel='stylesheet' href='assets/css/webicons.css'/>
+
     <!-- SCRIPT(S) -->
         <!-- Modernizr -->
             <script src="js/vendor/modernizr-2.8.0.min.js"></script>
@@ -158,6 +161,10 @@
                            data-ga-action="Nav click"
                            data-ga-label="About us">About</a></li>
                 </ul>
+                
+                <div id="Buton"><img src="images/Buton.png"></div>
+			    <div id="LiveChat"><img src="images/LiveChat.png"></div>
+			    <div id="SpeechBubbles"><img src="images/SpeechBubbles.png"></div>
             </div>
         <!-- end site-header -->
 
