--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
                            data-ga-label="About us">About</a></li>
                 </ul>
                 
-                <div id="Buton"><img src="images/Buton.png"></div>
-			    <div id="LiveChat"><img src="images/LiveChat.png"></div>
-			    <div id="SpeechBubbles"><img src="images/SpeechBubbles.png"></div>
+                <div id="Buton"><img src="assets/images/webicons/Buton.png"></div>
+			    <div id="LiveChat"><img src="assets/images/webicons/LiveChat.png"></div>
+			    <div id="SpeechBubbles"><img src="assets/images/webicons/SpeechBubbles.png"></div>
             </div>
         <!-- end site-header -->
 
