--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
 
         <!-- WebIcons -->
             <link rel='stylesheet' href='assets/css/webicons.css'/>
+            <style>
+            	#livechatwi
+		{
+		    position:absolute;
+		    left:450px; top:350px; width:300px; height:150px;
+		}
+            </style>
 
     <!-- SCRIPT(S) -->
         <!-- Modernizr -->
@@ -162,9 +169,7 @@
                            data-ga-label="About us">About</a></li>
                 </ul>
                 
-                <div id="Buton"><img src="assets/images/webicons/Buton.png"></div>
-			    <div id="LiveChat"><img src="assets/images/webicons/LiveChat.png"></div>
-			    <div id="SpeechBubbles"><img src="assets/images/webicons/SpeechBubbles.png"></div>
+                <div id="livechatwi"><img src="https://cloud.githubusercontent.com/assets/5073946/9059730/fdb23fe2-3aac-11e5-82f6-26382672d648.png"></div>
             </div>
         <!-- end site-header -->
 
