--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
             <style>
             	#livechatwi
 		{
-		    position:absolute;
-		    left:450px; top:350px; width:300px; height:150px;
+		    position: absolute;
+    		    top: 0px;
+    		    right: 0px;
 		}
             </style>
 
