--- a/index.html
+++ b/index.html
@@ -137,6 +137,14 @@
 
         <!-- Add your site or application content here -->
         <div class="container">
+
+            <!-- Web Icons -->
+            <div id="livechatwi">
+                <a href="#">
+                    <img src="https://cloud.githubusercontent.com/assets/5073946/9059730/fdb23fe2-3aac-11e5-82f6-26382672d648.png">
+                </a>
+            </div>
+
             <div class="site-header clearfix" role="banner">
                 <header>
                 <div class="site-logo">
@@ -161,8 +169,6 @@
                            data-ga-action="Nav click"
                            data-ga-label="About us">About</a></li>
                 </ul>
-                
-                <div id="livechatwi"><img src="https://cloud.githubusercontent.com/assets/5073946/9059730/fdb23fe2-3aac-11e5-82f6-26382672d648.png"></div>
             </div>
         <!-- end site-header -->
 
