--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
             <!-- Web Icons -->
             <div id="livechatwi">
-                <a href="#">
+                <a href="/chat">
                     <img src="https://cloud.githubusercontent.com/assets/5073946/9059730/fdb23fe2-3aac-11e5-82f6-26382672d648.png">
                 </a>
             </div>
