--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
             <!-- Web Icons -->
             <div id="livechatwi">
-                <a href="/chat">
+                <a href="chat">
                     <img src="https://cloud.githubusercontent.com/assets/5073946/9059730/fdb23fe2-3aac-11e5-82f6-26382672d648.png">
                 </a>
             </div>
@@ -285,28 +285,28 @@
         <div class="aside">
             <div class="container">
                 <ul class="inline-block-list">
-                    <li><a href="/blog"
+                    <li><a href="blog"
                            data-ga-category="Outbound links"
                            data-ga-action="Footer click"
                            data-ga-label="View our Blog!">
                         <span class=""></span>
                         Blog
                     </a></li>
-                    <li><a href="/shop"
+                    <li><a href="shop"
                            data-ga-category="Outbound links"
                            data-ga-action="Footer click"
                            data-ga-label="Buy in our Shop!">
                         <span class=""></span>
                         Shop
                     </a></li>
-                    <li><a href="/wiki"
+                    <li><a href="wiki"
                            data-ga-category="Outbound links"
                            data-ga-action="Footer click"
                            data-ga-label="Contibute with us in our Wiki!">
                         <span class=""></span>
                         Wiki
                     </a></li>
-                    <li><a href="/chat"
+                    <li><a href="chat"
                            data-ga-category="Outbound links"
                            data-ga-action="Footer click"
                            data-ga-label="Chat with us!">
