--- a/chat/index.html
+++ b/chat/index.html
@@ -58,6 +58,21 @@
     <script src="js/chat.js"></script>
 
 <!-- SITE END -->
+<!-- SCRIPT START -->
+
+<!-- Google Analytics -->
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-53583302-2', 'auto');
+  ga('send', 'pageview');
+  ga(‘set’, ‘&uid’, {{USER_ID}}); // Legen Sie die Nutzer-ID mithilfe des Parameters "user_id" des angemeldeten Nutzers fest.
+</script>
+
+<!-- SCRIPT START -->
   </body>
 </html>
 <!-- Build the <> with <3 by the Chatly team for The Jack's Dogs Family -->
