--- a/index.html
+++ b/index.html
@@ -359,42 +359,43 @@
 <!-- SITE END -->
 <!-- SCRIPT START -->
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
-        <script>
-        <script src="assets/js/plugins.js"></script>
-        <script src="assets/js/main.js"></script>
+<!-- Basic JS files for jdsf.isc -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
+    <script src="assets/js/plugins.js"></script>
+    <script src="assets/js/main.js"></script>
 
-        <!-- Google Analytics -->
-        <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+<!-- Google Analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-        ga('create', 'UA-53583302-2', 'auto');
-        ga('send', 'pageview');
-        </script>
+      ga('create', 'UA-53583302-2', 'auto');
+      ga('send', 'pageview');
+      ga(‘set’, ‘&uid’, {{USER_ID}}); // Legen Sie die Nutzer-ID mithilfe des Parameters "user_id" des angemeldeten Nutzers fest.
+    </script>
 
+<!-- NProgress -->
+    <script>
+      NProgress.start();
+      setTimeout(function() { NProgress.done(); }, 1000);
 
-<script>
-NProgress.start();
-setTimeout(function() { NProgress.done(); }, 1000);
-
-$("#index").click(function() { NProgress.start(); });
-$("#comics").click(function() { NProgress.start(); });
-$("#videos").click(function() { NProgress.start(); });
-$("#characters").click(function() { NProgress.start(); });
-$("#about").click(function() { NProgress.start(); });
-$("#contact").click(function() { NProgress.start(); });
-</script>
+      $("#index").click(function() { NProgress.start(); });
+      $("#comics").click(function() { NProgress.start(); });
+      $("#videos").click(function() { NProgress.start(); });
+      $("#characters").click(function() { NProgress.start(); });
+      $("#about").click(function() { NProgress.start(); });
+      $("#contact").click(function() { NProgress.start(); });
+    </script>
 
 <!-- GetSiteControl -->
-<script>
-  (function (w,i,d,g,e,t,s) {w[d] = w[d]||[];t= i.createElement(g);
-    t.async=1;t.src=e;s=i.getElementsByTagName(g)[0];s.parentNode.insertBefore(t, s);
-  })(window, document, '_gscq','script','//widgets.getsitecontrol.com/22160/script.js');
-</script>
+    <script>
+      (function (w,i,d,g,e,t,s) {w[d] = w[d]||[];t= i.createElement(g);
+        t.async=1;t.src=e;s=i.getElementsByTagName(g)[0];s.parentNode.insertBefore(t, s);
+      })(window, document, '_gscq','script','//widgets.getsitecontrol.com/22160/script.js');
+    </script>
 
 <!-- SCRIPT END -->
     </body>
