--- a/chat/index.html
+++ b/chat/index.html
@@ -49,6 +49,11 @@
       </footer>
     </div>
 
+      <!-- POWERED BY -->
+      <div class="poweredby">
+        Powered by <a href="https://chatly.isc/">Chatly</a>
+      </div>
+
 <!-- SITE END -->
 <!-- SCRIPT START -->
 
