--- a/chat/index.html
+++ b/chat/index.html
@@ -13,6 +13,7 @@
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" >
     <link rel="stylesheet" href="css/chat.css">
+    <link rel="stylesheet" href="css/chatly.css">
 
   <!-- DATA -->
     <meta name="title" content="The Jack's Dogs Family Chat">
