--- a/chat/index.html
+++ b/chat/index.html
@@ -51,7 +51,7 @@
     </div>
 
       <!-- POWERED BY -->
-      <div class="poweredby">
+      <div id="poweredby">
         Powered by <a href="https://chatly.isc/">Chatly</a>
       </div>
 
