--- a/chat/index.html
+++ b/chat/index.html
@@ -52,7 +52,7 @@
 
       <!-- POWERED BY -->
       <div id="poweredby">
-        Powered by <a href="https://chatly.isc/">Chatly</a>
+        <span class="poweredby">Powered by</span> <strong><a href="https://chatly.isc/">Chatly</a></strong> 
       </div>
 
 <!-- SITE END -->
