--- a/chat/index.html
+++ b/chat/index.html
@@ -52,7 +52,7 @@
 
       <!-- POWERED BY -->
       <div id="poweredby">
-        <span class="poweredby">Powered by</span> <strong><a href="https://chatly.isc/">Chatly</a></strong> 
+        <span class="poweredby">Powered by</span> <span class="chatly"><a href="https://chatly.isc/">Chatly</a></span>
       </div>
 
 <!-- SITE END -->
