--- a/chat/index.html
+++ b/chat/index.html
@@ -30,13 +30,13 @@
       <header>
         <!-- APP TITLE -->
         <div class="example-chat-toolbar">
-          <h2>The Jack's Dogs Family Chat</h2>
+          <h2>The Jack's Dogs Family (Live) Chat</h2>
         </div>
 
         <!-- NAME FIELD -->
         <div class='example-chat-username-field'>
           <div class="example-chat-avatar"><i class="fa fa-bolt"></i></div>
-          <input type='text' id='username' placeholder='Enter your (real) name...'>
+          <input type='text' id='username' placeholder='Enter please your (real) name...'>
         </div>
       </header>
 
