--- a/videos.html
+++ b/videos.html
@@ -208,6 +208,16 @@
             			<param name="trailer" value="link here"></param>
             			<param name="allowFullScreen" value="true"></param>
             			<param name="allowscriptaccess" value="always"></param>
+            				<embed
+            				 class="voverlay"
+            				 src="http://www.youtube.com/v/XQu8TTBmGhA?autoplay=1&rel=0&enablejsapi=1&playerapiid=ytplayer"
+            				 type="application/x-shockwave-flash"
+            				 allowscriptaccess="always"
+            				 allowfullscreen="true"
+            				 width="425"
+            				 height="344"
+            				 title="The Jack's Dogs Family">
+            				</embed>
             		</object>
             	</div>
 
