--- a/videos.html
+++ b/videos.html
@@ -221,8 +221,6 @@
             		</object>
             	</div>
 
-
-
 	            <div class="videogallery">
 
           	  	<a 
@@ -323,6 +321,22 @@
     <!-- VideoLightBox -->
       	<script src="assets/videolb/js/jquery.tools.min.js" type="text/javascript"></script>
       	<script src="assets/videolb/js/videolightbox.js" type="text/javascript"></script>
+
+    <!-- FancyBox -->
+      	<script type="text/javascript">
+      		$(document).ready(function() {
+      			
+      			$("#VideoTrailer").hide();
+      			
+      			$("#inline").fancybox({
+      				"hideOnContentClick": true,
+      				"frameWidth": 425,
+      				"frameHeight": 344,
+      				"zoomSpeedIn": 300,
+      				"zoomSpeedOut": 300
+      			});
+      		});
+      	</script>	
 
     <!-- Google Analytics -->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
