--- a/videos.html
+++ b/videos.html
@@ -202,7 +202,7 @@
             <h2>Video Gallery</h2>
             <div class="content">
             	
-            	<a id="inline" href="#VideoTrailer"><img src="" alt="" /></a>
+            	<a id="inline" href="#VideoTrailer"><img src="assets/videolb/thumbnails/0.png" alt="" /></a>
             	<div id="VideoTrailer">
             		<object width="425" height="344">
             			<param name="trailer" value="link here"></param>
