--- a/videos.html
+++ b/videos.html
@@ -202,7 +202,7 @@
             <h2>Video Gallery</h2>
             <div class="content">
             	
-            	<a class="fancybox-media" href="http://www.youtube.com/v/XQu8TTBmGhA?autoplay=1&rel=0&enablejsapi=1&playerapiid=ytplayer"><img src="assets/videolb/thumbnails/0.png" alt="" /></a>
+            	<a class="fancybox-media" href="http://www.youtube.com/v/XQu8TTBmGhA"><img src="assets/videolb/thumbnails/0.png" alt="" /></a>
 
 	            <div class="videogallery">
 
