--- a/videos.html
+++ b/videos.html
@@ -220,6 +220,7 @@
             <h2>Video Gallery</h2>
             <div class="content">
             	
+            	<a class="fancybox-media" href="http://www.youtube.com/v/AWrqNj6VVT4"><img src="assets/libs/videolb/thumbnails/0.png" alt="" /></a>
             	<a class="fancybox-media" href="http://www.youtube.com/v/XQu8TTBmGhA"><img src="assets/libs/videolb/thumbnails/0.png" alt="" /></a>
 
             </div>
