--- a/videos.html
+++ b/videos.html
@@ -219,10 +219,10 @@
         <div class="site-section site-section-video">
             <h2>Video Gallery</h2>
             <div class="content">
-            	<ul>
-		<li><a class="fancybox-media" href="http://www.youtube.com/v/AWrqNj6VVT4"><img src="assets/libs/videolb/thumbnails/0.png" alt="" /></a></li>
-            	<li><a class="fancybox-media" href="http://www.youtube.com/v/XQu8TTBmGhA"><img src="assets/libs/videolb/thumbnails/0.png" alt="" /></a></li>
-		</ul>
+            	
+		<a class="fancybox-media" href="http://www.youtube.com/v/AWrqNj6VVT4"><img src="assets/libs/videolb/thumbnails/0.png" alt="" /></a></li>
+            	<a class="fancybox-media" href="http://www.youtube.com/v/XQu8TTBmGhA"><img src="assets/libs/videolb/thumbnails/0.png" alt="" /></a></li>
+		
             </div>
         </div>
 
