--- a/chat/index.html
+++ b/chat/index.html
@@ -18,7 +18,7 @@
   <!-- DATA -->
     <meta name="title" content="The Jack's Dogs Family Chat">
     <meta name="description" content="Chatly. Chat easy. @ the official 'The Jack's Dogs Family' website">
-    <meta name="keywords" content="Chatly, jdsf.isc, chat, firebase">
+    <meta name="keywords" content="chatly, the jack's dogs family, jdsf.isc, chat, firebase, suriyaa kudo, aahash de ruffy">
   </head>
 
   <body>
