--- a/chat/index.html
+++ b/chat/index.html
@@ -80,4 +80,4 @@
 <!-- SCRIPT START -->
   </body>
 </html>
-<!-- Build the <> with <3 by the Chatly team for The Jack's Dogs Family -->
+<!-- Build the <> with <3 by the Chatly team for The Jack's Dogs Family ~ Generated {{ site.time }} -->
