--- a/chat/index.html
+++ b/chat/index.html
@@ -80,4 +80,5 @@
 <!-- SCRIPT START -->
   </body>
 </html>
+<!-- Copyright (c) 2013-present Suriyaa Kudo. All rights reserved. ~ This material may not be reproduced, displayed, modified or distributed without the express prior written permission of the copyright holder. -->
 <!-- Build the <> with <3 by the Chatly team for The Jack's Dogs Family ~ Generated {{ site.time }} -->
